add stream and serialization benchmarks
